--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sienna-react",
-  "homepage": "https://linusgeffarth.github.io/vm-landing-page/",
+  "homepage": "https://trauerfeier.online",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
