--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.9.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.9.0",
+    "react-helmet": "^6.0.0",
     "react-jotform-embed": "^1.0.4",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.2",
